[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Cards/CardBase.gd" type="Script" id=1]
[ext_resource path="res://src/Fonts/manaspace/manaspace8.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/HitBox.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 96 )

[node name="CardBase" type="MarginContainer"]
anchor_right = 0.1
anchor_bottom = 0.266667
rect_pivot_offset = Vector2( 32, 48 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 128.0
margin_bottom = 192.0
color = Color( 0, 0, 0, 1 )

[node name="CardNameBox" type="Sprite" parent="."]
scale = Vector2( 2, 2 )

[node name="ColorRect" type="ColorRect" parent="CardNameBox"]
margin_left = 4.0
margin_top = 4.0
margin_right = 60.0
margin_bottom = 12.0
color = Color( 1, 0.654902, 0, 1 )

[node name="CardArt" type="Sprite" parent="."]
centered = false
offset = Vector2( 4, 12 )

[node name="CardTextBox" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
offset = Vector2( 4, 0 )

[node name="ColorRect" type="ColorRect" parent="CardTextBox"]
margin_left = 4.0
margin_top = 60.0
margin_right = 60.0
margin_bottom = 92.0
color = Color( 1, 0.654902, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 128.0
margin_bottom = 192.0

[node name="TopGap" type="MarginContainer" parent="VBoxContainer"]
margin_right = 128.0
margin_bottom = 8.0
rect_min_size = Vector2( 0, 8 )

[node name="NameBar" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 12.0
margin_right = 128.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 8 )

[node name="LeftGap" type="MarginContainer" parent="VBoxContainer/NameBar"]
margin_right = 6.0
margin_bottom = 12.0
rect_min_size = Vector2( 6, 0 )

[node name="CardNameBox" type="MarginContainer" parent="VBoxContainer/NameBar"]
margin_left = 10.0
margin_right = 118.0
margin_bottom = 12.0
rect_min_size = Vector2( 108, 0 )

[node name="CardName" type="Label" parent="VBoxContainer/NameBar/CardNameBox"]
margin_right = 108.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 2 )
text = "Card Name"
autowrap = true

[node name="ArtBar" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 128.0
margin_bottom = 120.0
rect_min_size = Vector2( 64, 92 )

[node name="LeftGap" type="MarginContainer" parent="VBoxContainer/ArtBar"]
margin_bottom = 92.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ArtBar"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 92.0

[node name="TextBar" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 124.0
margin_right = 128.0
margin_bottom = 136.0

[node name="LeftGap" type="MarginContainer" parent="VBoxContainer/TextBar"]
margin_right = 6.0
margin_bottom = 12.0
rect_min_size = Vector2( 6, 0 )

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/TextBar"]
margin_left = 10.0
margin_right = 118.0
margin_bottom = 12.0
rect_min_size = Vector2( 108, 0 )

[node name="CardText" type="Label" parent="VBoxContainer/TextBar/MarginContainer2"]
margin_right = 108.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 2 )
text = "Card Test"
autowrap = true

[node name="HitBox" type="Area2D" parent="."]
visible = false
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 64, 96 )
shape = SubResource( 1 )

[connection signal="mouse_entered" from="." to="." method="_on_CardBase_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_CardBase_mouse_exited"]
